--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -52,8 +52,10 @@ jobs:
         ---
         applications:
         - name: cccbbb123
-          memory: 256M
-          random-route: true
+          memory: 128M
+          disk_quota: 128M
+          routes:
+          - route: ${{ secrets.CF_ROUTE_IBM }}
           command: ./v2ray
           buildpacks:
           - binary_buildpack
