--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - master
   schedule:
-    - cron: "0 21 * * ?"
+    - cron: "0 21 1/3 * ?"
   workflow_dispatch:
   
 jobs:
@@ -73,7 +73,7 @@ jobs:
           
   ibm20200628:
     needs: ibm20200620
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     
@@ -136,7 +136,7 @@ jobs:
           
   ibm20200708:
     needs: ibm20200628
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
     
@@ -262,7 +262,7 @@ jobs:
           
   ibm20200712:
     needs: ibm20200709
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     
