--- a/.github/workflows/deploy-to-pws.yml
+++ b/.github/workflows/deploy-to-pws.yml
@@ -7,8 +7,8 @@ on:
     paths:
       - "manifest-pws.yml"
       - ".github/workflows/deploy-to-pws.yml"
-  schedule:
-    - cron: "0 0 0 8 0"
+  #schedule:
+    #- cron: "0 0 0 8 0"
   workflow_dispatch:
 
 jobs:
