--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -56,9 +56,9 @@ jobs:
           disk_quota: 128M
           routes:
           - route: ${{ secrets.CF_ROUTE_IBM }}
-          command: ./v2ray
-          buildpacks:
-          - binary_buildpack
+          #command: ./v2ray
+          # buildpacks:
+           - binary_buildpack
         EOF
     
     - uses: citizen-of-planet-earth/cf-cli-action@v1
