--- a/.github/workflows/ibm1.yml
+++ b/.github/workflows/ibm1.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - master
   schedule:
-    - cron: "0 21 1/3 * ?"
+    - cron: "0 21 1/3 7 ?"
   workflow_dispatch:
   
 jobs:
