--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
     - master
-  schedule:
-    - cron: "0 21 1/3 * ?"
+  #schedule:
+    #- cron: "0 21 1/3 * ?"
   workflow_dispatch:
   
 jobs:
