--- a/.github/workflows/ibm1.yml
+++ b/.github/workflows/ibm1.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
     - master
-  schedule:
-    - cron: "0 21 * * 1,3,6"
+  #schedule:
+    #- cron: "0 21 * * 1,3,6"
   workflow_dispatch:
   
 jobs:
